last changes before frontend

--- a/index — копия.html
+++ b/index — копия.html
@@ -22,8 +22,8 @@
     <script>
       let ws;
       let token =
-        "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOiI1ZTc3NzY3MzBlNGRmZTM3MjA4MDBhMDIiLCJpYXQiOjE1ODQ5NTE5NDgsImV4cCI6MTU4NDk1NTU0OH0.0ajjEEDWOZPh3csmB0kGUdKmKwxKZDJ4Wqx3rTwRLSs";
-      let teamId = "miTreNPtg";
+        "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOiI1ZTc3NzY3MzBlNGRmZTM3MjA4MDBhMDIiLCJpYXQiOjE1ODQ5NTU1MzMsImV4cCI6MTU4NTA0MTkzM30.3hW973Fst4RfF9R-_r0XKRcDmb_-GpDGgB3mPZOiAlg";
+      let teamId = "LesnUACxT";
 
       $("#connect").click(() => {
         ws = new WebSocket("ws://localhost:3001");
