--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <script>
       let ws;
       let token =
-        "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOiI1ZTY2NzAyYTI2ODNkNTE0ZjRkYzA4YjciLCJpYXQiOjE1ODQ5NTE4NzYsImV4cCI6MTU4NDk1NTQ3Nn0.ziEZpd9RGs0G-vgI9HQOVPbokJOSy5jOv88q9j9dUYM";
-      let teamId = "miTreNPtg";
+        "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOiI1ZTY2NzAyYTI2ODNkNTE0ZjRkYzA4YjciLCJpYXQiOjE1ODQ5NTU1NDksImV4cCI6MTU4NTA0MTk0OX0.vioYVTIqPUdpnQraGmVTTrXSuA6d8ia8eFX-46nQGGY";
+      let teamId = "LesnUACxT";
 
       $("#connect").click(() => {
         ws = new WebSocket("ws://localhost:3001");
