added passwords for teams

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       let ws;
       let token =
         "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOiI1ZTY2NzAyYTI2ODNkNTE0ZjRkYzA4YjciLCJpYXQiOjE1ODQ5NTU1NDksImV4cCI6MTU4NTA0MTk0OX0.vioYVTIqPUdpnQraGmVTTrXSuA6d8ia8eFX-46nQGGY";
-      let teamId = "LesnUACxT";
+      let teamId = "kXMg1AhDO";
 
       $("#connect").click(() => {
         ws = new WebSocket("ws://localhost:3001");
